Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,8 @@ variables:
   imageName: 'pipelines-javascript-docker'
 
 steps:
+- checkout: self
+  lfs: true
 - task: Docker@2
   displayName: Build an image
   inputs:
