Update azure-pipelines.yml for Azure Pipelines
push to docker hub

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,5 @@ steps:
   inputs:
     repository: $(imageName)
     command: build
+    repository: davidnohejl/metabolic-models
     Dockerfile: dockerfile
