--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 variables:
-  imageName: 'pipelines-javascript-docker'
+  imageName: 'metabolic-models'
 
 steps:
 - checkout: self
@@ -15,13 +15,14 @@ steps:
   inputs:
     command: Build an image
     Dockerfile: dockerfile
-- task: Docker@1
-  displayName: Login
+- task: Docker@2
+  displayName: Login to Docker Hub
   inputs:    
      command: login
      containerRegistry: davidnohejldockerhub
-- task: Docker@1
+
+- task: Docker@2
   displayName: 'Push an image'
   inputs:
-     command: push an image
-     imageName: 'metabolic-models:$(Build.BuildId)'
+     command: push
+     repository: davidnohejl/metabolic-models
