--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,11 +10,7 @@ variables:
 steps:
 - checkout: self
   lfs: true
-- task: Docker@1
-  displayName: Build an image
-  inputs:
-    command: Build an image
-    Dockerfile: dockerfile
+
 - task: Docker@2
   displayName: Login to Docker Hub
   inputs:    
@@ -24,5 +20,5 @@ steps:
 - task: Docker@2
   displayName: 'Push an image'
   inputs:
-     command: push
+     command: buildAndPush
      repository: davidnohejl/metabolic-models
