Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,5 @@ steps:
   displayName: 'Push an image'
   inputs:
      command: buildAndPush
+     dockerfile: dockerfile
      repository: davidnohejl/metabolic-models
